[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/BLV_Map_Editor/grid.png" type="Texture" id=1]
[ext_resource path="res://addons/BLV_Map_Editor/NodeScripts/MainPanel.gd" type="Script" id=2]
[ext_resource path="res://addons/BLV_Map_Editor/LevelCreateDialogue.tscn" type="PackedScene" id=3]

[node name="MainPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="Control" parent="ScrollContainer"]
margin_right = 9999.0
margin_bottom = 9999.0
rect_min_size = Vector2( 9999, 9999 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/PanelContainer"]
margin_right = 9985.0
margin_bottom = 9985.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Yaxis" type="Line2D" parent="ScrollContainer/PanelContainer"]
points = PoolVector2Array( 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336 )
default_color = Color( 0.12549, 0.12549, 0.12549, 1 )

[node name="Xaxis" type="Line2D" parent="ScrollContainer/PanelContainer"]
points = PoolVector2Array( 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992, 0, 992, 6336, 992 )
default_color = Color( 0.12549, 0.12549, 0.12549, 1 )

[node name="LevelContainer" type="Control" parent="ScrollContainer/PanelContainer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popups" type="CanvasLayer" parent="."]

[node name="WindowDialog" parent="Popups" instance=ExtResource( 3 )]
margin_left = 256.0
margin_top = 256.0
margin_right = 519.0
margin_bottom = 588.0
